deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: arch-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: arch-app
  template:
    metadata:
      labels:
        app: arch-app
    spec:
      containers:
        - name: arch
          image: exxbrain/architecture:0.1.5
          ports:
            - name: web
              containerPort: 8000
          readinessProbe:
            httpGet:
              port: 8000
              path: /health
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              port: 8000
              path: /
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 2
